# Murugan_Bot

./: README.md  agent.py  app.py  pyproject.toml  rag.py
data/: murugan_knowledge.txt
